# latouAlgorithm

./: CMakeLists.txt  LUT8_gen.cpp  Log.cpp  Log.h  README.md  blank.py  cpu.py  latou.cpp  latou.h  learning.cpp  shapeMatch.cpp  shapeMatch.h  temporal_latou2019-12-22.txt  temporal_latoudizuodetector.yaml  test.cpp  test.py  testlib.cpp  train.py
public/: dizuodetector.yaml  lapiandetector.yaml
temporal_latou/: 2020-01-06.txt  dizuo.yaml  dizuodetector.yaml  lapian.yaml  lapiandetector.yaml  lapianinfo.yaml
